--- a/lesson17/lesson17_3.ipynb
+++ b/lesson17/lesson17_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,19 @@
       "dtypes: float64(17), int64(12), object(4)\n",
       "memory usage: 47.3+ MB\n"
      ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m year \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m請輸入年份\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      2\u001b[0m taiwan_df[(taiwan_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m日期\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39myear \u001b[38;5;241m==\u001b[39m year)]\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/ipykernel/kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1283\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1284\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1285\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1287\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/ipykernel/kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
     }
    ],
    "source": [
@@ -62,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1090,6 +1103,466 @@
    ],
    "source": [
     "jp_df[(jp_df[\"日期\"].dt.year == 2022) & (jp_df[\"日期\"].dt.month == 6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>洲名</th>\n",
+       "      <th>國家</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>總確診數</th>\n",
+       "      <th>新增確診數</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>164702</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>17050</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164703</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>17070</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164704</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>17095</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164705</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>17129</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164706</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164878</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-06-26</td>\n",
+       "      <td>3613345</td>\n",
+       "      <td>39642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164879</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-06-27</td>\n",
+       "      <td>3641921</td>\n",
+       "      <td>28576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164880</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-06-28</td>\n",
+       "      <td>3686338</td>\n",
+       "      <td>44417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164881</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-06-29</td>\n",
+       "      <td>3728363</td>\n",
+       "      <td>42025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164882</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>3767283</td>\n",
+       "      <td>38920</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>181 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        洲名  國家         日期     總確診數  新增確診數\n",
+       "164702  亞洲  台灣 2022-01-01    17050     21\n",
+       "164703  亞洲  台灣 2022-01-02    17070     20\n",
+       "164704  亞洲  台灣 2022-01-03    17095     25\n",
+       "164705  亞洲  台灣 2022-01-04    17129     34\n",
+       "164706  亞洲  台灣 2022-01-05    17155     26\n",
+       "...     ..  ..        ...      ...    ...\n",
+       "164878  亞洲  台灣 2022-06-26  3613345  39642\n",
+       "164879  亞洲  台灣 2022-06-27  3641921  28576\n",
+       "164880  亞洲  台灣 2022-06-28  3686338  44417\n",
+       "164881  亞洲  台灣 2022-06-29  3728363  42025\n",
+       "164882  亞洲  台灣 2022-06-30  3767283  38920\n",
+       "\n",
+       "[181 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taiwan_df.query('日期>=\"2022-01-01\" and 日期<=\"2022-06-30\"')    #單引號for'日期'    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>洲名</th>\n",
+       "      <th>國家</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>總確診數</th>\n",
+       "      <th>新增確診數</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>164819</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-04-28</td>\n",
+       "      <td>88446</td>\n",
+       "      <td>11508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164820</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-04-29</td>\n",
+       "      <td>100753</td>\n",
+       "      <td>12307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164821</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>115883</td>\n",
+       "      <td>15130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164822</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-05-01</td>\n",
+       "      <td>132955</td>\n",
+       "      <td>17072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164824</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-05-03</td>\n",
+       "      <td>173942</td>\n",
+       "      <td>40987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164884</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-02</td>\n",
+       "      <td>3837856</td>\n",
+       "      <td>34807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164885</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-03</td>\n",
+       "      <td>3870528</td>\n",
+       "      <td>32672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164886</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-04</td>\n",
+       "      <td>3893643</td>\n",
+       "      <td>23115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164887</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-05</td>\n",
+       "      <td>3929627</td>\n",
+       "      <td>35984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164888</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-06</td>\n",
+       "      <td>3964188</td>\n",
+       "      <td>34561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        洲名  國家         日期     總確診數  新增確診數\n",
+       "164819  亞洲  台灣 2022-04-28    88446  11508\n",
+       "164820  亞洲  台灣 2022-04-29   100753  12307\n",
+       "164821  亞洲  台灣 2022-04-30   115883  15130\n",
+       "164822  亞洲  台灣 2022-05-01   132955  17072\n",
+       "164824  亞洲  台灣 2022-05-03   173942  40987\n",
+       "...     ..  ..        ...      ...    ...\n",
+       "164884  亞洲  台灣 2022-07-02  3837856  34807\n",
+       "164885  亞洲  台灣 2022-07-03  3870528  32672\n",
+       "164886  亞洲  台灣 2022-07-04  3893643  23115\n",
+       "164887  亞洲  台灣 2022-07-05  3929627  35984\n",
+       "164888  亞洲  台灣 2022-07-06  3964188  34561\n",
+       "\n",
+       "[66 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taiwan_df.query('新增確診數>=10000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>洲名</th>\n",
+       "      <th>國家</th>\n",
+       "      <th>日期</th>\n",
+       "      <th>總確診數</th>\n",
+       "      <th>新增確診數</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>164702</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>17050</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164703</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>17070</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164704</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>17095</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164705</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>17129</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164706</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>17155</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164884</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-02</td>\n",
+       "      <td>3837856</td>\n",
+       "      <td>34807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164885</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-03</td>\n",
+       "      <td>3870528</td>\n",
+       "      <td>32672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164886</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-04</td>\n",
+       "      <td>3893643</td>\n",
+       "      <td>23115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164887</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-05</td>\n",
+       "      <td>3929627</td>\n",
+       "      <td>35984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164888</th>\n",
+       "      <td>亞洲</td>\n",
+       "      <td>台灣</td>\n",
+       "      <td>2022-07-06</td>\n",
+       "      <td>3964188</td>\n",
+       "      <td>34561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>187 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        洲名  國家         日期     總確診數  新增確診數\n",
+       "164702  亞洲  台灣 2022-01-01    17050     21\n",
+       "164703  亞洲  台灣 2022-01-02    17070     20\n",
+       "164704  亞洲  台灣 2022-01-03    17095     25\n",
+       "164705  亞洲  台灣 2022-01-04    17129     34\n",
+       "164706  亞洲  台灣 2022-01-05    17155     26\n",
+       "...     ..  ..        ...      ...    ...\n",
+       "164884  亞洲  台灣 2022-07-02  3837856  34807\n",
+       "164885  亞洲  台灣 2022-07-03  3870528  32672\n",
+       "164886  亞洲  台灣 2022-07-04  3893643  23115\n",
+       "164887  亞洲  台灣 2022-07-05  3929627  35984\n",
+       "164888  亞洲  台灣 2022-07-06  3964188  34561\n",
+       "\n",
+       "[187 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year = int(input(\"請輸入年份\"))\n",
+    "taiwan_df[(taiwan_df['日期'].dt.year == year)]"
    ]
   }
  ],
