--- a/lesson18/lesson18_4.ipynb
+++ b/lesson18/lesson18_4.ipynb
@@ -534,6 +534,480 @@
     "    return s.mean()\n",
     "stu.apply(abc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "第1號     85.4\n",
+       "第2號     80.4\n",
+       "第3號     77.2\n",
+       "第4號     64.0\n",
+       "第5號     87.0\n",
+       "第6號     87.2\n",
+       "第7號     71.4\n",
+       "第8號     74.4\n",
+       "第9號     72.0\n",
+       "第10號    71.8\n",
+       "第11號    80.2\n",
+       "第12號    69.4\n",
+       "第13號    74.2\n",
+       "第14號    80.6\n",
+       "第15號    78.4\n",
+       "第16號    67.6\n",
+       "第17號    80.8\n",
+       "第18號    75.4\n",
+       "第19號    84.0\n",
+       "第20號    83.2\n",
+       "第21號    76.6\n",
+       "第22號    69.8\n",
+       "第23號    79.2\n",
+       "第24號    68.6\n",
+       "第25號    86.2\n",
+       "第26號    77.6\n",
+       "第27號    81.8\n",
+       "第28號    72.0\n",
+       "第29號    77.0\n",
+       "第30號    71.2\n",
+       "第31號    76.2\n",
+       "第32號    79.0\n",
+       "第33號    62.6\n",
+       "第34號    71.0\n",
+       "第35號    74.6\n",
+       "第36號    65.8\n",
+       "第37號    78.4\n",
+       "第38號    76.8\n",
+       "第39號    83.8\n",
+       "第40號    72.0\n",
+       "第41號    72.6\n",
+       "第42號    79.6\n",
+       "第43號    65.0\n",
+       "第44號    78.8\n",
+       "第45號    79.4\n",
+       "第46號    76.8\n",
+       "第47號    66.0\n",
+       "第48號    77.8\n",
+       "第49號    78.8\n",
+       "第50號    80.6\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def abc(s)-> float:        #return value\n",
+    "    return s.mean()\n",
+    "\n",
+    "stu.apply(abc, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>平均</th>\n",
+       "      <th>最高分</th>\n",
+       "      <th>最低分</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>第1號</th>\n",
+       "      <td>85.4</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第2號</th>\n",
+       "      <td>80.4</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第3號</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第4號</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第5號</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第6號</th>\n",
+       "      <td>87.2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第7號</th>\n",
+       "      <td>71.4</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>62.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第8號</th>\n",
+       "      <td>74.4</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第9號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第10號</th>\n",
+       "      <td>71.8</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第11號</th>\n",
+       "      <td>80.2</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第12號</th>\n",
+       "      <td>69.4</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第13號</th>\n",
+       "      <td>74.2</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第14號</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第15號</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第16號</th>\n",
+       "      <td>67.6</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第17號</th>\n",
+       "      <td>80.8</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第18號</th>\n",
+       "      <td>75.4</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第19號</th>\n",
+       "      <td>84.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第20號</th>\n",
+       "      <td>83.2</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第21號</th>\n",
+       "      <td>76.6</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第22號</th>\n",
+       "      <td>69.8</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第23號</th>\n",
+       "      <td>79.2</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第24號</th>\n",
+       "      <td>68.6</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第25號</th>\n",
+       "      <td>86.2</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第26號</th>\n",
+       "      <td>77.6</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第27號</th>\n",
+       "      <td>81.8</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第28號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第29號</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第30號</th>\n",
+       "      <td>71.2</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第31號</th>\n",
+       "      <td>76.2</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第32號</th>\n",
+       "      <td>79.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第33號</th>\n",
+       "      <td>62.6</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第34號</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第35號</th>\n",
+       "      <td>74.6</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第36號</th>\n",
+       "      <td>65.8</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第37號</th>\n",
+       "      <td>78.4</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第38號</th>\n",
+       "      <td>76.8</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第39號</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第40號</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第41號</th>\n",
+       "      <td>72.6</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第42號</th>\n",
+       "      <td>79.6</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第43號</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第44號</th>\n",
+       "      <td>78.8</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>54.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第45號</th>\n",
+       "      <td>79.4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第46號</th>\n",
+       "      <td>76.8</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第47號</th>\n",
+       "      <td>66.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第48號</th>\n",
+       "      <td>77.8</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第49號</th>\n",
+       "      <td>78.8</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>第50號</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>61.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        平均    最高分   最低分\n",
+       "第1號   85.4   96.0  76.0\n",
+       "第2號   80.4   98.0  58.0\n",
+       "第3號   77.2   88.0  63.0\n",
+       "第4號   64.0   80.0  51.0\n",
+       "第5號   87.0   95.0  76.0\n",
+       "第6號   87.2  100.0  63.0\n",
+       "第7號   71.4   88.0  62.0\n",
+       "第8號   74.4   89.0  50.0\n",
+       "第9號   72.0   96.0  52.0\n",
+       "第10號  71.8   93.0  53.0\n",
+       "第11號  80.2   99.0  63.0\n",
+       "第12號  69.4   94.0  59.0\n",
+       "第13號  74.2   92.0  65.0\n",
+       "第14號  80.6   95.0  56.0\n",
+       "第15號  78.4   99.0  54.0\n",
+       "第16號  67.6   85.0  61.0\n",
+       "第17號  80.8   99.0  66.0\n",
+       "第18號  75.4  100.0  51.0\n",
+       "第19號  84.0   97.0  70.0\n",
+       "第20號  83.2   91.0  74.0\n",
+       "第21號  76.6  100.0  59.0\n",
+       "第22號  69.8   82.0  58.0\n",
+       "第23號  79.2   97.0  59.0\n",
+       "第24號  68.6   92.0  53.0\n",
+       "第25號  86.2  100.0  71.0\n",
+       "第26號  77.6   97.0  53.0\n",
+       "第27號  81.8   98.0  64.0\n",
+       "第28號  72.0  100.0  52.0\n",
+       "第29號  77.0   93.0  56.0\n",
+       "第30號  71.2   93.0  55.0\n",
+       "第31號  76.2   93.0  50.0\n",
+       "第32號  79.0  100.0  50.0\n",
+       "第33號  62.6   95.0  51.0\n",
+       "第34號  71.0   87.0  51.0\n",
+       "第35號  74.6   98.0  52.0\n",
+       "第36號  65.8   92.0  50.0\n",
+       "第37號  78.4   95.0  63.0\n",
+       "第38號  76.8   93.0  65.0\n",
+       "第39號  83.8  100.0  74.0\n",
+       "第40號  72.0   89.0  56.0\n",
+       "第41號  72.6   87.0  55.0\n",
+       "第42號  79.6   96.0  64.0\n",
+       "第43號  65.0   78.0  50.0\n",
+       "第44號  78.8  100.0  54.0\n",
+       "第45號  79.4   97.0  55.0\n",
+       "第46號  76.8   98.0  55.0\n",
+       "第47號  66.0   74.0  58.0\n",
+       "第48號  77.8   96.0  57.0\n",
+       "第49號  78.8   92.0  68.0\n",
+       "第50號  80.6   99.0  61.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def efg(s)-> pd.Series:    #return series\n",
+    "    return pd.Series([s.mean(), s.max(), s.min()], index=[\"平均\",\"最高分\",\"最低分\"])\n",
+    "stu.apply(efg, axis = 1)"
+   ]
   }
  ],
  "metadata": {
